Supported csv import.

--- a/sample.yml
+++ b/sample.yml
@@ -68,4 +68,21 @@ projects:
           start_date: "2018-09-20"
           due_date: null
           priority: Normal
-
+        - id: 29
+          subject: chapter5-2
+          status: New
+          description: chapter5-2
+          tracker: Docs
+          start_date: "2018-09-20"
+          due_date: null
+          priority: Normal
+- id: 2
+  tickets:
+  - id: 28
+    subject: ticket1
+    status: New
+    description: ""
+    tracker: Bug
+    start_date: "2018-07-23"
+    due_date: null
+    priority: Normal
